fix code blocks overflow for mobile devices

--- a/app/_assets/stylesheets/pages/homepage.less
+++ b/app/_assets/stylesheets/pages/homepage.less
@@ -158,12 +158,14 @@
 
   pre {
     margin: 0;
+    overflow: hidden;
   }
 
   code {
     background-color: #1e262b;
     color: #fff;
     padding: 18px;
+    overflow: auto;
 
     .nv {
       color: #66bfff;
